# funowl

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Grammar.txt  ImplementationNotes.md  OWL_2_Test_Cases.md  Pipfile  README.md  TestCaseIssues.md  UseCase.md  grammar.md  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: index.md
funowl/: Annotations.py  Assertions.py  Axioms.py  ClassAxioms.py  ClassExpressions.py  DataPropertyAxioms.py  DataRanges.py  DatapropertyExpressions.py  Declarations.py  FunOwlBase.py  GeneralDefinitions.py  Identifiers.py  ImplementationNotes.md  Individuals.py  Literals.py  ObjectpropertyAxioms.py  ObjectpropertyExpressions.py  OntologyDocument.py  PrefixDeclarations.py  Terminals.py  __init__.py  annotations.py  assertions.py  axioms.py  class_axioms.py  class_expressions.py  cli.py  dataproperty_axioms.py  dataproperty_expressions.py  dataranges.py  declarations.py  general_definitions.py  identifiers.py  individuals.py  literals.py  objectproperty_axioms.py  objectproperty_expressions.py  ontology_document.py  prefix_declarations.py
notebooks/: SubclassToEquivalent.ipynb  basics.ipynb  basics.py  pizza.py  singleton_property.py  singleton_property_original.py
tests/: __init__.py  test_annotations.py  test_assertions.py  test_basics.py  test_classaxioms.py  test_classexpressions.py  test_datapropertyaxioms.py  test_datapropertyexpressions.py  test_dataranges.py  test_declarations.py  test_generaldefinitions.py  test_generaldefs.py  test_identifiers.py  test_literals.py  test_objectpropertyaxioms.py  test_ontologydocument.py  (+4 more)
(+2178 files in other folders)
