[metadata]
name = funowl
url = https://github.com/hsolbrig/funowl
author = Harold Solbrig
author-email = solbrig@jhu.edu
summary = Python rendering of the OWL Functional syntax
home-page = http://biolink.github.io/hsolbrig
license = CC0 1.0 Universal
python-requires = >=3.7
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords =
    OWL
    ontology
    web
    functional syntax
    python

[files]
packages =
    funowl

